--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^5.1.10",
-    "webpack": "^1.8.5"
+    "babel-core": "5.1.10",
+    "babel-loader": "4.3.0",
+    "webpack": "1.8.5"
   }
 }
